# mdinfo-exiftool

./: .bumpversion.cfg  CHANGELOG.md  README.md  README.rst  README_DEV.md  dodo.py  pyproject.toml
.github/workflows/: python-package.yml
mdinfo_exiftool/: __init__.py  _version.py  help.py  mdinfo_exiftool.py
tests/: README.md  test_exiftool.py
